<resources>
    <string name="slogan">EZ Tools</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="error_no_email_client">"Email client not found on your phone.
Please send us an email: 
shereworkshop@gmail.com"</string>
    <string name="about_we">About us</string>
    <string name="about_content">"Make Android more easily.

Contact us：shereworkshop@gmail.com"</string>
    <string name="simple_tools">EZ Tools</string>
    <string name="feedback_title">Feedback</string>
    <string name="input_app_name">App name:</string>
    <string name="input_package_name">Package:</string>
    <string name="input_version">Version:</string>
    <string name="input_phone_type">Phone:</string>
    <string name="input_android_version">And Version:</string>
    <string name="feedback_success">Thank you for your feedback.</string>
    <string name="hint_write_here">Put your feedback here :)</string>
    <string name="opinion_box">Feedback</string>
    <string name="hint_email">Email (option)</string>
    <string name="commit">OK</string>
    <string name="auto_update">Auto Update</string>
    <string name="intro_auto_update">These is a new version published and you connecting the wifi, it will auto upgrade to newest version.</string>
    <string name="remove_ad">Clean AD</string>
    <string name="downloading">downloading.</string>
    <string name="download_failure">download failed.</string>
    <string name="click_to_install">Click to install</string>
    <string name="info_updatable_now">New version was prepared, click to install.</string>
    <string name="more_setting">more settings</string>
    <string name="ask_exit">Exit ?</string>
    <string name="exit">Exit</string>
    <string name="more">More</string>
    <string name="info_remove_ad">"您的积分：%1$s
消耗%2$s积分便可永久去除程序中的所有广告(程序升级后不受影响)。"</string>
    <string name="earn_point">免费获得积分</string>
    <string name="operation_success">Succeed</string>
    <string name="info_remove_ad_success">"清除广告成功！完全退出程序后再次进入将不会出现广告。
注：请不要随意在系统的设置中清除此程序的数据。
感谢您的支持。"</string>
    <string name="info_remove_ad_failure">消耗积分失败，请稍后再试。</string>
    <string name="done">Done</string>
    <string name="rate_me">Encourage us</string>
    <string name="error_no_market_client">"Can't not found Google Play on your device."</string>
    <string name="info_rate">"Thank you are here.
If you like EasyTouch, 5 Star is the best gift to us."</string>
    <string name="rate">Rate</string>
    <string name="not_now">Not now</string>
    <string name="free_for_you">Free for you</string>
    <string name="close">Close</string>
    <string name="info_sorry">"EasyTouch support remove AD now!
We are so sorry that EasyTouch has an AD,we are try our best make EasyTouch more powerful.EasyTouch is free,so we have to show an AD in it, if not, we would not exists, sorry again.
We hope you can understand :)"</string>
    <string name="n_updatable">%1$s updatable</string>
    <string name="upgrade">Upgrade</string>
    <string name="checking_update">Checking update data.</string>
    <string name="version_newest">Current version was newest.</string>
    <string name="feedback_content">In the process of using any questions can give us feedback, we will try to solve your.</string>
    <string name="close_app">Close app</string>
    <string name="more_simple_tools">More simple tools</string>
    <string name="more_app">The more you... Etc.</string>
    <string name="app_name">EasyTouch</string>
    <string name="q_10">How to uninstall</string>
    <string name="a_10">You can find easy way in the menu of EasyTouch.</string>
    <string name="q_9">"I can't delete the notification'EasyTouch is running'"</string>
    <string name="a_9">Because Android 4.3 new features, in order to let the user know what apps are running, all suspended app must display a notification in the notification bar, we are so sorry. But you can change the notification(GENERAL SETTINGS-NOTIFICATION BAR SETTING), make it more make sense.</string>
    <string name="q_3">"Finished the task, but i can't get coins"</string>
    <string name="a_3">Please check the task required again(some task may need register) to complete the task,as has completed but did not get gold coins, please write to us: sheresupport@foxmail.com for you to handle, sorry for that.</string>
    <string name="q_4">Coins load fail</string>
    <string name="a_4">"1.Please check the phone network is normally, are there security software disable the network access of EasyTouch?
2.some third-party ROM maybe disable AD network access."</string>
    <string name="q_7">"Can't normally lock screen(screen open after lock screen)."</string>
    <string name="a_7">Some 4.0 OS will happen this problem. You can change the setting of screen type(ROOT lock screen), then try again.</string>
    <string name="q_8">What is ROOT</string>
    <string name="a_8">ROOT permissions is the highest permission in Android OS, Some features require user authorization ROOT permissions to complete. If your phone does not have ROOT permission, please google for more information.</string>
    <string name="q_5">"Theme can't install"</string>
    <string name="a_5">"1.If you running a 'Screen Filter' similar app, maybe can't press the install button when you installing an app.
2.Check whether open 'Unknown sources' setting(System settings -> Security -> check Unknown sources).
Other question, please write to us: sheresupport@foxmail.com for you(With screenshot if probably) to handle."</string>
    <string name="q_6">Theme download fail</string>
    <string name="a_6">Coins will not be deducted when the theme download fails, you can try again to download and install. If the download fails repeatedly, I hope you can give us a letter: sheresupport@foxmail.com, help us to solve your problem.</string>
    <string name="explain_fn_none">"Why can't i delete the notification(EasyTouch is running)?

Because Android 4.3 new features, in order to let the user know what apps are running, all suspended app must display a notification in the notification bar, we are so sorry."</string>
    <string name="explain_theme_cant_install">"If you running a 'Screen Filter' similar app, maybe can't press the install button when you installing an app."</string>
    <string name="q_1">How to auto-start about MIUI OS</string>
    <string name="a_1">"1、Settings-Apps-EasyTouch
2、Manage premissions-open Trust this app
3、Manage premissions-open Auto-start"</string>
    <string name="q_2">How to auto-start about HUAWEI Emotion UI</string>
    <string name="a_2">Settings-All-Startup-manager-Check EasyTouch</string>
    <string name="explain_root_title">Device not has ROOT</string>
    <string name="explain_root">"Rooting is the Android equivalent of jailbreaking, a means of unlocking the operating system.
Some features(Back key,cap screen...) require authorization ROOT permissions to complete."</string>
    <string name="explain_root_more_info">MORE INFO</string>
    <string name="explain_root_cancel">CANCEL</string>
    <string name="explain_root_dont_show_again">"don't show again"</string>
    <string name="explain_cant_uninstall_ok">I KNOWN</string>
    <string name="explain_cant_uninstall_title">PLEASE NOTE</string>
    <string name="explain_cant_uninstall_1">You just activated lock screen function.</string>
    <string name="explain_cant_uninstall_2">"1. Now you can't uninstall EasyTouch in normal method. You can uninstall through the icon of app list."</string>
    <string name="explain_cant_uninstall_3">2. Or uninstall through the menu in EasyTouch.</string>
    <string name="explain_root_recommend_recommend">Recommend you:</string>
    <string name="explain_root_recommend_download">DOWNLOAD</string>
    <string name="explain_root_recommend_cancel">CANCEL</string>
    <string name="setting">Setting</string>
    <string name="favor">Favor</string>
    <string name="home_screen">Home</string>
    <string name="gesture">Gesture</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="screen_lightness">Display</string>
    <string name="flashlight">Flashlight</string>
    <string name="mute">Slient</string>
    <string name="wifi">Wifi</string>
    <string name="auto_orientation">Auto Rotation</string>
    <string name="moblie_network">APN</string>
    <string name="gps">GPS</string>
    <string name="blue_tooth">Bluetooth</string>
    <string name="auto_screen_lightness">Auto Brightness</string>
    <string name="assistant_touch_enable">EasyTouch Enable</string>
    <string name="contact_us">Contact Us</string>
    <string name="easy_touch_in_here">EasyTouch in here</string>
    <string name="click_here_back_to_screen">Click here back to screen</string>
    <string name="normal">Normal</string>
    <string name="vibration">Vibration</string>
    <string name="silent">Silent</string>
    <string name="share">Share</string>
    <string name="thanks">Thanks</string>
    <string name="title_share">Easy Touch for android</string>
    <string name="info_share">"Easy Touch is a button float on your phone.You can easily to 
Change your phone setting
Open your favour app
Go to Home Screen
Lock Screen

https://play.google.com/store/apps/details?id="</string>
    <string name="apps">Apps</string>
    <string name="search_app">Search app</string>
    <string name="info_read_me">"EasyTouch can't uninstall directly because EasyTouch activate your Device Manager, and you must deactivate it before you try to uninstall.
You can (Settings -> Location &amp; Security -> Select Device Administrators) deactivate EasyTouch than try to uninstall again.
Any question, see Q &amp; A or send us an email
shereworkshop@gmail.com
Thank you."</string>
    <string name="i_got_it">I got it</string>
    <string name="how_to_uninstall">How to uninstall?</string>
    <string name="alpha">Alpha</string>
    <string name="size">Size</string>
    <string name="auto_open">Auto Launch</string>
    <string name="info_auto_open">Auto Lauch EasyTouch after reboot.</string>
    <string name="animation_speed">Animation speed</string>
    <string name="slow">Smooth</string>
    <string name="quick">Quick</string>
    <string name="lockscreen_type">Lock Screen Type</string>
    <string name="lockscreen_type_normal">Normal(recommend)</string>
    <string name="lockscreen_type_root">Root(for some Android 4.0.+OS)</string>
    <string name="general_settings">GENERAL SETTINGS</string>
    <string name="other">OTHER</string>
    <string name="help">HELP</string>
    <string name="update">Update</string>
    <string name="settings_rate">Rate us</string>
    <string name="tell_your_friend">Tell your friend</string>
    <string name="about_us">About us</string>
    <string name="screenshot_setting">Screenshot Setting</string>
    <string name="about_root">About ROOT</string>
    <string name="custom_action">Gesture</string>
    <string name="hide_when_screen_off">Hide when screen-off</string>
    <string name="info_hide_when_screen_off">Easytouch maybe could not auto-show when unlocking phone in Third-party launcher.</string>
    <string name="activity_nav_theme_station">Theme</string>
    <string name="activity_nav_my_theme">My Theme</string>
    <string name="activity_nav_setting">Settings</string>
    <string name="activity_nav_panel_setting">Panel Setting</string>
    <string name="advanced_settings">ADVANCED SETTINGS</string>
    <string name="display_settings">DISPLAY SETTINGS</string>
    <string name="activity_setting_display_setting">Display Setting</string>
    <string name="activity_setting_notification">Notification Bar Setting</string>
    <string name="activity_nav_panel_uninstall">Uninstall EasyTouch</string>
    <string name="activity_nav_panel_help">Help</string>
    <string name="smart_displacement">Smart displacement</string>
    <string name="smart_displacement_desc">Open EasyTouch near the floating button.</string>
</resources>