<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/activity_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textColor="#ff999999" android:paddingLeft="5.0dip" android:paddingTop="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/general_settings" />
            <View android:layout_gravity="center_vertical" android:background="@color/activity_divider" android:layout_width="330.0dip" android:layout_height="2.0dip" />
            <LinearLayout style="@style/ItemSetting">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/assistant_touch_enable" android:layout_weight="10.0" style="@style/TextSettingItemTitle" />
                <CheckBox android:id="@id/cb_assistant_touch_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/selector_btn_check_holo" android:layout_weight="0.0" />
            </LinearLayout>
            <View android:layout_gravity="center_vertical" android:background="@color/activity_divider" android:layout_width="330.0dip" android:layout_height="1.0dip" />
            <LinearLayout style="@style/ItemSetting">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_weight="10.0">
                    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auto_open" style="@style/TextSettingItemTitle" />
                    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/info_auto_open" style="@style/TextSettingItemContent" />
                </LinearLayout>
                <CheckBox android:id="@id/cb_auto_open" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/selector_btn_check_holo" />
            </LinearLayout>
            <View android:layout_gravity="center_vertical" android:background="@color/activity_divider" android:layout_width="330.0dip" android:layout_height="1.0dip" />
            <LinearLayout android:paddingTop="4.0dip" android:paddingBottom="4.0dip" style="@style/ItemSetting">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_weight="10.0">
                    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hide_when_screen_off" style="@style/TextSettingItemTitle" />
                    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/info_hide_when_screen_off" style="@style/TextSettingItemContent" />
                </LinearLayout>
                <CheckBox android:id="@id/cb_hide_when_screen_off" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/selector_btn_check_holo" android:layout_weight="0.0" />
            </LinearLayout>
            <View android:layout_gravity="center_vertical" android:background="@color/activity_divider" android:layout_width="330.0dip" android:layout_height="1.0dip" />
            <LinearLayout android:paddingTop="4.0dip" android:paddingBottom="4.0dip" style="@style/ItemSetting">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_weight="10.0">
                    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/smart_displacement" style="@style/TextSettingItemTitle" />
                    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/smart_displacement_desc" style="@style/TextSettingItemContent" />
                </LinearLayout>
                <CheckBox android:id="@id/cb_smart_displacement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/selector_btn_check_holo" android:layout_weight="0.0" />
            </LinearLayout>
            <View android:layout_gravity="center_vertical" android:id="@id/divider_lay_notification" android:background="@color/activity_divider" android:layout_width="330.0dip" android:layout_height="1.0dip" />
            <LinearLayout android:id="@id/lay_notification" android:background="@drawable/selector_default_highlight" style="@style/ItemSetting">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/activity_setting_notification" style="@style/TextSettingItemTitle" />
            </LinearLayout>
            <View android:gravity="center_vertical" android:id="@id/divider_lay_notification" android:background="@color/activity_divider" android:layout_width="330.0dip" android:layout_height="1.0dip" />
            <TextView android:textSize="14.0sp" android:textColor="#ff999999" android:paddingLeft="5.0dip" android:paddingTop="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/display_settings" />
            <View android:layout_gravity="center_vertical" android:background="@color/activity_divider" android:layout_width="330.0dip" android:layout_height="2.0dip" />
            <LinearLayout android:id="@id/lay_display_setting" android:background="@drawable/selector_default_highlight" style="@style/ItemSetting">
                <TextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/activity_setting_display_setting" style="@style/TextSettingItemTitle" />
            </LinearLayout>
            <TextView android:textSize="14.0sp" android:textColor="#ff999999" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/advanced_settings" />
            <View android:layout_gravity="center_vertical" android:background="@color/activity_divider" android:layout_width="330.0dip" android:layout_height="2.0dip" />
            <LinearLayout android:id="@id/lay_custom_action" android:background="@drawable/selector_item_side_nav" style="@style/ItemSetting">
                <TextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/custom_action" style="@style/TextSettingItemTitle" />
            </LinearLayout>
            <View android:layout_gravity="center_vertical" android:background="@color/activity_divider" android:layout_width="330.0dip" android:layout_height="1.0dip" />
            <LinearLayout android:id="@id/lay_screenshot_setting" android:background="@drawable/selector_default_highlight" style="@style/ItemSetting">
                <TextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/screenshot_setting" style="@style/TextSettingItemTitle" />
            </LinearLayout>
            <View android:layout_gravity="center_vertical" android:background="@color/activity_divider" android:layout_width="330.0dip" android:layout_height="1.0dip" />
            <LinearLayout android:orientation="vertical" android:paddingTop="16.0dip" android:paddingBottom="4.0dip" style="@style/ItemSetting2">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/lockscreen_type" style="@style/TextSettingItemTitle" />
                </LinearLayout>
                <RadioGroup android:orientation="vertical" android:id="@id/rg_lockscreen_type" android:paddingLeft="26.0dip" android:paddingTop="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <RadioButton android:textSize="12.0sp" android:textColor="@color/text_secondary" android:id="@id/rb_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@drawable/selector_btn_radio_holo_dark" android:text="@string/lockscreen_type_normal" android:singleLine="true" android:layout_weight="1.0" />
                    <RadioButton android:textSize="12.0sp" android:textColor="@color/text_secondary" android:id="@id/rb_root" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@drawable/selector_btn_radio_holo_dark" android:text="@string/lockscreen_type_root" android:singleLine="true" android:layout_weight="1.0" />
                </RadioGroup>
            </LinearLayout>
            <TextView android:textSize="14.0sp" android:textColor="#ff999999" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/other" />
            <View android:layout_gravity="center_vertical" android:background="@color/activity_divider" android:layout_width="330.0dip" android:layout_height="1.0dip" />
            <LinearLayout android:id="@id/lay_upgrade" android:background="@drawable/selector_default_highlight" style="@style/ItemSetting">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/update" style="@style/TextSettingItemTitle" />
            </LinearLayout>
            <View android:layout_gravity="center_vertical" android:background="@color/activity_divider" android:layout_width="330.0dip" android:layout_height="1.0dip" />
            <LinearLayout android:id="@id/lay_share" android:background="@drawable/selector_default_highlight" style="@style/ItemSetting">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_weight="10.0">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share" style="@style/TextSettingItemTitle" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tell_your_friend" style="@style/TextSettingItemContent" />
                </LinearLayout>
            </LinearLayout>
            <View android:layout_gravity="center_vertical" android:background="@color/activity_divider" android:layout_width="330.0dip" android:layout_height="1.0dip" />
            <LinearLayout android:id="@id/lay_about" android:background="@drawable/selector_default_highlight" style="@style/ItemSetting">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/about_us" style="@style/TextSettingItemTitle" />
            </LinearLayout>
            <TextView android:textSize="14.0sp" android:textColor="#ff999999" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/help" />
            <View android:layout_gravity="center_vertical" android:background="@color/activity_divider" android:layout_width="330.0dip" android:layout_height="1.0dip" />
            <LinearLayout android:id="@id/lay_about_root" android:background="@drawable/selector_default_highlight" style="@style/ItemSetting">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/about_root" style="@style/TextSettingItemTitle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>